--- a/nginx/conf.d/vhost-sixcert_co.conf
+++ b/nginx/conf.d/vhost-sixcert_co.conf
@@ -1,19 +1,19 @@
 server {
     listen 443 ssl http2 default_server;
     listen [::]:443 ssl http2 default_server;
-    server_name sixcert.co www.sixcert.co;
+    server_name rataphong.inet.co.th www.rataphong.inet.co.th;
 
-    ssl_certificate /etc/nginx/ssl/www_sixcert_co.pem;
-    ssl_certificate_key /etc/nginx/ssl/www_sixcert_co.key;
+    ssl_certificate /etc/nginx/ssl/lekal.crt;
+    ssl_certificate_key /etc/nginx/ssl/Private_key_star_inet_co_th.key;
 
     root /var/www/html;
     index index.php index.html;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
+        try_files $uri $uri/ =404;
     }
 
-    location ~ \.php {
+    location ~ \.php$ {
         fastcgi_index index.php;
         fastcgi_pass php:9000;
 
@@ -28,6 +28,6 @@ server {
 server {
     listen 80;
     listen [::]:80;
-    server_name sixcert.co www.sixcert.co;
-    return 301 https://www.sixcert.co$request_uri;
+    server_name rataphong.inet.co.th www.rataphong.inet.co.th;
+    return 301 https://$host$request_uri;
 }
